examples/test/testpolicy6569.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6569
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key36: value20
      key25: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value42
          key19: value43
      podSelector:
        matchLabels:
          key29: value49
          key9: value26
          key34: value49
